--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.7.1",
+    "ejs-lint": "^0.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1"
