--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
+    "mongoose-sequence": "^5.2.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
